--- a/index.html
+++ b/index.html
@@ -81,14 +81,15 @@ La puissance d'un mot, figurant tout son sens ! Tel est l'immonde... Contraireme
 
 <br><img src="https://media3.giphy.com/media/Bn0JzrZxWfTKU/giphy.gif?cid=ecf05e471df22df193d549ab3d60b9cb60010674ddf66de4&rid=giphy.gif">
 
-Bien des choses à dire ! J'y vois une pluralité de régression au sujet de l'élève en général. Tout d'abord l'enfant n'est plus bon rhéteur, normal puisque l'esprit s'est tout simplement éteint et le savoir envolé ! Oui, et bien de choses ont fait que... Je cite ici la mauvaise littérature et la sous-culture, prisées tout deux des enfants aujourd'hui, l'esprit n'est plus adapté à d'autre niveau, ce qui semble évident ! L'ignorance est également dû à l'uniformisation des esprits par internet et les médias. Plus personne ne réfléchis par lui-même, prolifèrant la sottise à tout va. Enfin l'intérêt inexistant et le manque de curiosité, et les appauvrissements des programmes scolaires s'ajoutent à ça ! Je mettrai aussi les livres reniés du cartable écolier ! Je me permettrais, enfin, de dire que les programmes scolaires aident à la compréhension du monde mais cette compréhension est faite personnellement, point besoin de belles notes pour devenir Siddhartha ! 
-<img src="https://media0.giphy.com/media/l44QzsOLXxcrigdgI/giphy.gif?cid=ecf05e47vw2jakt4eexgan9mzn47ou5yjrwj66h61xuntske&rid=giphy.gif">
+Bien des choses à dire ! J'y vois une pluralité de régression au sujet de l'élève en général. Tout d'abord l'enfant n'est plus bon rhéteur, normal puisque l'esprit s'est tout simplement éteint et le savoir envolé ! Oui, et bien de choses ont fait que... Je cite ici la mauvaise littérature et la sous-culture, prisées tout deux des enfants aujourd'hui, l'esprit n'est plus adapté à d'autre niveau, ce qui semble évident ! L'ignorance est également dû à l'uniformisation des esprits par internet et les médias. Plus personne ne réfléchis par lui-même, prolifèrant la sottise à tout va. Enfin l'intérêt inexistant et le manque de curiosité, et les appauvrissements des programmes scolaires s'ajoutent à ça ! Je mettrai aussi les livres reniés du cartable écolier ! Je me permettrais, enfin, de dire que les programmes scolaires aident à la compréhension du monde mais cette compréhension est faite personnellement, point besoin de belles notes pour devenir Siddhartha !
+
+<br><img src="https://media0.giphy.com/media/l44QzsOLXxcrigdgI/giphy.gif?cid=ecf05e47vw2jakt4eexgan9mzn47ou5yjrwj66h61xuntske&rid=giphy.gif">
 
 Ah l'immonde ! Il faut vivre avec son temps et ses inconvénients ! Voyez-vous, à notre époque, il n'y a que peu d'érudits et autres savants ! Le savoir est un univers révolu, de par ses propres porteurs ! Retenez juste une phrase : "Il faut cultiver notre jardin"... Voltaire, Candide, Les Lumières, 18ème siècle... 
 
 <br><img src="https://media4.giphy.com/media/1lBjtSx9NE3tzEPJsS/giphy.gif?cid=ecf05e472c87ee2ee45980822b736b78d44e01f038ba9d8d&rid=giphy.gif">
 
-                                          Le Marquis de la Roselière.
+                                         <br>Le Marquis de la Roselière.
 </li></h1></li>
  <br> <li><h1> LE LIVRE:
 
