--- a/index.html
+++ b/index.html
@@ -59,14 +59,7 @@ Il foule pour rien dire, des idées commune à qui bon semble. Il n'y a plus d'i
 
 
 <ul>
-<br><li><h1>     LA POÉSIE:
-
-
-
-
-
-
-La poésie n'a pas d'utilitée. Elle n' est que le moyen impératif pour accéder aux hautes-sphères de l'érudition et est en quelques sortes, un portail vers la beauté du monde. Dites vous que c'est un travail extrêmement rigoureux sur le savoir et l'esprit. Mais son talent est inné. Le poète est un prophète, déchiffrant les symboles et les signaux que nous envois la vie. Le poète est un traducteur. Mais la langue poétique est un pris d'un eugénisme. Le travail et la rigueur, doctrine de Boileau, sont nécessaire à sa compréhension. Voilà une des innombrables œuvres, écrits par un de ses languiste :</h1><br><img src="https://media2.giphy.com/media/rlUh6GM9rQk7e/giphy.gif?cid=ecf05e47atxplw8x9ekybad4yvmo4afr75n09q2l5vry7emc&rid=giphy.gif"></li>
+<br><li><img src="https://media2.giphy.com/media/rlUh6GM9rQk7e/giphy.gif?cid=ecf05e47atxplw8x9ekybad4yvmo4afr75n09q2l5vry7emc&rid=giphy.gif"></li>
 
 <br><img src="https://media3.giphy.com/media/VylQoDnVi9t6w/giphy.gif?cid=ecf05e47ieel5saoub6oqzcnwqyx0vylfzbz6rxq6w26az1n&rid=giphy.gif"></li>
 
@@ -91,16 +84,7 @@ Ah l'immonde ! Il faut vivre avec son temps et ses inconvénients ! Voyez-vous, 
 
                                          <br>Le Marquis de la Roselière.
 </li></h1></li>
- <br> <li><h1> LE LIVRE:
-
-
-
-
-
-
-Du papyrus en roseau à la manufacture moderne, le livre est un bien estimé du libre-penseur. Cependant délaissé de cette génération, autant stupide qu'un troupeau de moutons. Le livre représente la pensée sur un sujet dit et la vision du monde d'un auteur en général. La pertinence du livre varie en fonction de cette pensée, même si chaque idée mérite sa page ! Un livre est donc intemporel et très important !
-</h1>
-
+ <br> <li>
 <img src="https://media2.giphy.com/media/3o84U78CXEB2opZd4I/giphy.gif?cid=ecf05e47ztlh9j7sqaqmvt8he51vtybqtttohapuhwu68d6q&rid=giphy.gif"></li>
 
 
